tweaks for mobile

--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@
 
 		<nav>
 			<div class="navPagesLinks">
-				<a href="#">Why Counselling</a>
+				<a href="#">About Us</a>
+				<a href="#">Our Services</a>
 				<a href="#">FAQs</a>
 				<a href="#">Contact Us</a>
+				<a href="#">Join Us</a>
 			</div>
 		</nav>
 
