--- a/index.html
+++ b/index.html
@@ -27,11 +27,6 @@
 		  href="assets/Square_logo-whiteBG.png"
 		  type="image/x-icon" />
 
-	<link rel="manifest"
-		  href="site.webmanifest" />
-	<meta name="theme-color"
-		  content="#173753" />
-
 	<link rel="stylesheet"
 		  href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
@@ -47,7 +42,7 @@
 		<nav>
 			<div class="navPagesLinks">
 				<a href="#">About Us</a>
-				<a href="#">Our Services</a>
+				<a href="p/services.html">Our Services</a>
 				<a href="#">FAQs</a>
 				<a href="#">Contact Us</a>
 				<a href="#">Join Us</a>
@@ -61,7 +56,7 @@
 
 	<header>
 		<h1>
-			Building Futures,
+			Inspiring Life Skills Development,
 			<span>Step by Step
 				<img src="assets/footsteps.png"
 					 alt="" />
@@ -86,9 +81,6 @@
 	
 	
 	
-	  Pages (shayad sections kehna chahte the)
-	
-
 	- Our Vision
 	- Our Team
 	- Why Counselling?
@@ -125,8 +117,8 @@
 
 		<div class="aboutSectionPart">
 			<div class="aboutSPImage-wrapper">
-				<img src="assets/counseling_image1.jpg"
-					 alt="" />
+				<!-- <img src="assets/counseling_image1.jpg"					 alt="" /> -->
+				<img src="assets/indianBusinessTeam_stockphoto.jpg"					 alt="" />
 				<!-- <img src="assets/undraw_adventure_map_hnin.svg" alt="" class="aboutSPTbgImage" /> -->
 
 			</div>
@@ -367,10 +359,10 @@
 	<hr class="sectionDivider">
 
 	<section class="contactScheduleSection">
-		<h2>Contact Us</h2>
+		<h2>Let's Connect!</h2>
 
 
-		<div class="schedule-wrapper">
+		<!-- <div class="schedule-wrapper">
 			<h3>When are we available?</h3>
 			<table class="scheduleTable">
 				<caption>Weekly Schedule</caption>
@@ -409,15 +401,50 @@
 					<td>Closed</td>
 				</tr>
 			</table>
-		</div>
+		</div> -->
 
-		<hr class="dotted">
+		<!-- <hr class="dotted"> -->
 
 
 		<div class="socialsContact-wrapper">
-			<h3>Our Socials & Contact</h3>
+			<h3>Book an appointment with the numbers below</h3>
+
+
+
+			<div class="contact-wrapper">
+
+				<div class="contactButton-wrapper">
+					<a href="https://wa.me/9311648098" target="_blank"
+					   class="whatsappLink">
+						<div>
+							<img src="assets/whatsappIcon.png"
+								 alt="">
+						</div>
+						<div>
+							<span>9311648098</span>
+						</div>
+					</a>
+				</div>
+
+				<div class="contactButton-wrapper">
+					<a href="tel:9311648098"
+					   class="phoneNumberLink">
+						<div>
+							<img src="assets/phoneIcon.png"
+								 alt="">
+						</div>
+						<div>
+							<span>9311648098</span>
+						</div>
+					</a>
+				</div>
+
+			</div>
 
 			<div class="socials-wrapper">
+				<h3>Our Socials</h3>
+
+				<div>
 
 				<div class="socialIcon-wrapper">
 					<a href="#"><img src="assets/twitterIcon.png"
@@ -433,38 +460,10 @@
 					<a href="#"><img src="assets/facebookIcon.png"
 							 alt="Facebook"></a>
 				</div>
-
-			</div>
-
-			<div class="contact-wrapper">
-
-				<div class="contactButton-wrapper">
-					<a href="#"
-					   class="whatsappLink">
-						<div>
-							<img src="assets/whatsappIcon.png"
-								 alt="">
-						</div>
-						<div>
-							<span>9311648098</span>
-						</div>
-					</a>
-				</div>
-
-				<div class="contactButton-wrapper">
-					<a href="#"
-					   class="phoneNumberLink">
-						<div>
-							<img src="assets/phoneIcon.png"
-								 alt="">
-						</div>
-						<div>
-							<span>9311648098</span>
-						</div>
-					</a>
 				</div>
 
 			</div>
+
 		</div>
 
 
