Make it responsive for desktop screens

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 
 		<nav>
 			<div class="navPagesLinks">
-				<a href="#">About Us</a>
-				<a href="p/services.html">Our Services</a>
+				<a href="#">About</a>
+				<a href="p/services.html">Services</a>
 				<a href="#">FAQs</a>
-				<a href="#">Contact Us</a>
-				<a href="#">Join Us</a>
+				<a href="#">Contact</a>
+				<a href="#">Join</a>
 			</div>
 		</nav>
 
@@ -53,20 +53,19 @@
 			<span class="material-symbols-outlined"> menu </span>
 		</button>
 	</div>
-
+	
+	<img src="assets/hero_page_image-min.jpg" alt="" class="heroImage" />
 	<header>
 		<h1>
-			Inspiring Life Skills Development,
+			Inspiring Life Skills Development,<br>
 			<span>Step by Step
-				<img src="assets/footsteps.png"
-					 alt="" />
+				<!-- <img src="assets/footsteps.png" alt="" /> -->
 			</span>
 		</h1>
-		<div class="footsteps"></div>
+		<!-- <div class="footsteps"></div> -->
 
 		<button class="regularButton">Book a Call</button>
 
-		<!-- <img src="assets/hero_page_image-min.jpg" alt="" class="heroImage" /> -->
 	</header>
 
 	<!-- 
