--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<h1>
 			Inspiring Life Skills Development,<br>
 			<span>Step by Step
-				<!-- <img src="assets/footsteps.png" alt="" /> -->
+				<!-- <img src="assets/footsteps.webp" alt="" /> -->
 			</span>
 		</h1>
 		<!-- <div class="footsteps"></div> -->
@@ -293,7 +293,7 @@
 
 			<div class="review-wrapper">
 				<div class="reviewerPicture-wrapper">
-					<img src="assets/manPic.png" alt="">
+					<img src="assets/manPic.webp" alt="">
 				</div>
 				<div class="reviewText-wrapper">
 					<span class="reviewText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat commodi repellendus quasi laboriosam facilis praesentium aperiam. Hic in enim quia!</span>
@@ -416,7 +416,7 @@
 					<a href="https://wa.me/9311648098" target="_blank"
 					   class="whatsappLink">
 						<div>
-							<img src="assets/whatsappIcon.png"
+							<img src="assets/whatsappIcon.webp"
 								 alt="">
 						</div>
 						<div>
@@ -429,7 +429,7 @@
 					<a href="tel:9311648098"
 					   class="phoneNumberLink">
 						<div>
-							<img src="assets/phoneIcon.png"
+							<img src="assets/phoneIcon.webp"
 								 alt="">
 						</div>
 						<div>
@@ -446,17 +446,17 @@
 				<div>
 
 				<div class="socialIcon-wrapper">
-					<a href="#"><img src="assets/twitterIcon.png"
+					<a href="#"><img src="assets/twitterIcon.webp"
 							 alt="Twitter"></a>
 				</div>
 
 				<div class="socialIcon-wrapper">
-					<a href="#"><img src="assets/instagramIcon.png"
+					<a href="#"><img src="assets/instagramIcon.webp"
 							 alt="Instagram"></a>
 				</div>
 
 				<div class="socialIcon-wrapper">
-					<a href="#"><img src="assets/facebookIcon.png"
+					<a href="#"><img src="assets/facebookIcon.webp"
 							 alt="Facebook"></a>
 				</div>
 				</div>
