--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		</button>
 	</div>
 	
-	<img src="assets/hero_page_image-min.jpg" alt="" class="heroImage" />
+	<img src="assets/hero_page_image-min.webp" alt="" class="heroImage" />
 	<header>
 		<h1>
 			Inspiring Life Skills Development,<br>
@@ -96,7 +96,7 @@
 
 		<div class="aboutSectionPart">
 			<div class="aboutSPImage-wrapper">
-				<img src="assets/hero_page_image2-min.jpg"
+				<img src="assets/hero_page_image2-min.webp"
 					 alt="" />
 			</div>
 			<div class="aboutSPText-wrapper">
@@ -116,8 +116,8 @@
 
 		<div class="aboutSectionPart">
 			<div class="aboutSPImage-wrapper">
-				<!-- <img src="assets/counseling_image1.jpg"					 alt="" /> -->
-				<img src="assets/indianBusinessTeam_stockphoto.jpg"					 alt="" />
+				<!-- <img src="assets/counseling_image1.webp"					 alt="" /> -->
+				<img src="assets/indianBusinessTeam_stockphoto.webp"					 alt="" />
 				<!-- <img src="assets/undraw_adventure_map_hnin.svg" alt="" class="aboutSPTbgImage" /> -->
 
 			</div>
@@ -138,7 +138,7 @@
 
 		<div class="aboutSectionPart">
 			<div class="aboutSPImage-wrapper">
-				<img src="assets/counseling_image2.jpg"
+				<img src="assets/counseling_image2.webp"
 					 alt="" />
 			</div>
 			<div class="aboutSPText-wrapper">
@@ -159,7 +159,7 @@
 
 		<div class="aboutSectionPart">
 			<div class="aboutSPImage-wrapper">
-				<!-- <img src="assets/team.jpg" alt="" /> -->
+				<!-- <img src="assets/team.webp" alt="" /> -->
 				<img src="assets/teamwork_illustartion.svg"
 					 alt=""
 					 class="teamWorkImage_aboutSP" />
