--- a/p/services.html
+++ b/p/services.html
@@ -39,7 +39,7 @@
 		<nav>
 			<div class="navPagesLinks">
 				<a href="/">About</a>
-				<a href="p/services.html">Services</a>
+				<a href="#">Services</a>
 				<a href="#">FAQs</a>
 				<a href="#">Contact</a>
 				<a href="#">Join</a>
