--- a/p/services.html
+++ b/p/services.html
@@ -38,7 +38,7 @@
 
 		<nav>
 			<div class="navPagesLinks">
-				<a href="/">About</a>
+				<a href="/">Home</a>
 				<a href="#">Services</a>
 				<a href="#">FAQs</a>
 				<a href="#">Contact</a>
