Add webinar page and other improvements

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 				<a href="p/services.html">Services</a>
 				<a href="#faqs">FAQs</a>
 				<a href="#reviews">Reviews</a>
+				<!-- <a href="p/webinar.html">Register for Webinar</a> -->
 				<a href="#contact">Contact</a>
 				<!-- <a href="#">Join</a> -->
 			</div>
@@ -69,7 +70,7 @@
 		</h1>
 		<!-- <div class="footsteps"></div> -->
 
-		<button class="regularButton">Book a Call</button>
+		<button class="regularButton" onclick="document.getElementById('contact').scrollIntoView()">Book a Call</button>
 
 	</header>
 
@@ -478,6 +479,10 @@
 
 	</section>
 
+
+	<div class="registerForWebinar-wrapper">
+		<a href="p/webinar.html">Register for Webinar</a>
+	</div>
 
 
 
