Add poster popup on homepage

--- a/index.html
+++ b/index.html
@@ -485,6 +485,28 @@
 	</div>
 
 
+	<dialog class="webinarPoster-dialog">
+		<button class="closeDialogButton actionButton regularButton">
+			<span class="material-symbols-outlined">
+			close
+			</span>
+		</button>
+
+
+		<div class="poster-wrapper">
+			<img src="assets/poster1.webp" alt="" class="webinarPosterImage">
+		</div>
+
+	</dialog>
+
+
+
+
+
+
+
+
+
 
 
 	<footer>
