Highlighted important parts in services page

--- a/p/services.html
+++ b/p/services.html
@@ -71,56 +71,54 @@
 
 <!-- <hr class="dotted"> -->
 
-
 <h2>🧠 Mental Health</h2>
-<p>Our mental health counseling services aim to provide support and guidance to individuals facing challenges such as anxiety, depression, and stress. Through personalized sessions, we help clients develop coping strategies and improve their overall well-being.</p>
+<p>Our mental health counseling services aim to provide <span class="highlightedText">support and guidance</span> to individuals facing challenges such as anxiety, depression, and stress. Through personalized sessions, we help clients develop coping strategies and improve their overall well-being.</p>
 
 <!-- <hr class="dotted"> -->
 
 
 <h2>🎓 Special Education</h2>
-<p>Our special education programs are designed to cater to the unique needs of individuals with diverse learning abilities. We offer personalized support and educational interventions to help students reach their full potential and succeed academically.</p>
+<p>Our special education programs are designed to cater to the <span class="highlightedText">unique needs of individuals with diverse learning abilities</span>. We offer personalized support and educational interventions to help students reach their full potential and succeed academically.</p>
 
 <!-- <hr class="dotted"> -->
 
 
 <h2>💼 Career Counselling</h2>
-<p>Our career counseling services assist individuals in exploring their interests, skills, and goals to make informed career decisions. We provide assessments, guidance, and resources to help clients navigate their career paths and achieve success.</p>
+<p>Our career counseling services assist individuals in <span class="highlightedText">exploring their interests, skills, and goals</span> to make informed career decisions. We provide assessments, guidance, and resources to help clients navigate their career paths and achieve success.</p>
 
 <!-- <hr class="dotted"> -->
 
 
 <h2>🎙️ Interview Preparation</h2>
-<p>Our interview preparation sessions equip individuals with the skills and confidence needed to excel in job interviews. We offer mock interviews, feedback, and strategies to help clients effectively communicate their qualifications and stand out to employers.</p>
+<p>Our interview preparation sessions equip individuals with the skills and confidence needed to excel in job interviews. We offer <span class="highlightedText">mock interviews, feedback, and strategies</span> to help clients effectively communicate their qualifications and stand out to employers.</p>
 
 
 <!-- <hr class="dotted"> -->
 
 <h2>🧘 Stress Management</h2>
-<p>Our stress management programs offer practical techniques and strategies to help individuals cope with and reduce stress in their daily lives. Through relaxation techniques, mindfulness practices, and stress-reduction exercises, we support clients in achieving greater peace of mind and well-being.</p>
+<p>Our stress management programs offer practical techniques and strategies to help individuals cope with and reduce stress in their daily lives. Through <span class="highlightedText">relaxation techniques, mindfulness practices, and stress-reduction exercises</span>, we support clients in achieving greater peace of mind and well-being.</p>
 
 <!-- <hr class="dotted"> -->
 
 <h2>💬 Communication Skills</h2>
-<p>Effective communication is essential in both personal and professional life. Our communication skills training focuses on enhancing verbal and nonverbal communication, active listening, and interpersonal skills to help individuals build stronger relationships and achieve their goals.</p>
+<p>Effective communication is essential in both personal and professional life. Our communication skills training focuses on enhancing <span class="highlightedText">verbal and nonverbal communication, active listening, and interpersonal skills</span> to help individuals build stronger relationships and achieve their goals.</p>
 
 <!-- <hr class="dotted"> -->
 
 
 <h2>👫 Adolescence Counselling</h2>
-<p>Adolescence can be a challenging time for many young people as they navigate various transitions and changes. Our adolescence counseling services provide support and guidance to teenagers dealing with issues such as peer pressure, identity exploration, and academic stress.</p>
+<p>Adolescence can be a challenging time for many young people as they navigate various transitions and changes. Our adolescence counseling services provide <span class="highlightedText">support and guidance to teenagers dealing with issues such as peer pressure, identity exploration, and academic stress</span>.</p>
 
 <!-- <hr class="dotted"> -->
 
 <h2>👪 Parents Counselling</h2>
-<p>Parenting can be both rewarding and challenging. Our parents counseling services offer support and guidance to parents facing difficulties in managing their children's behavior, fostering healthy family dynamics, and navigating the challenges of parenthood.</p>
+<p>Parenting can be both rewarding and challenging. Our parents counseling services offer support and guidance to parents facing difficulties in <span class="highlightedText">managing their children's behavior, fostering healthy family dynamics, and navigating the challenges of parenthood</span>.</p>
 
 <!-- <hr class="dotted"> -->
 
 <h2>🌱 Personality Development</h2>
-<p>Personality development is an ongoing process that involves enhancing one's self-awareness, confidence, and social skills. Our personality development programs focus on building self-esteem, assertiveness, and emotional intelligence to help individuals thrive personally and professionally.</p>
+<p>Personality development is an ongoing process that involves enhancing one's self-awareness, confidence, and social skills. Our personality development programs focus on building <span class="highlightedText">self-esteem, assertiveness, and emotional intelligence</span> to help individuals thrive personally and professionally.</p>
 
-    
 </div>
 
 
